--- a/custom-eslint-slow/package.json
+++ b/custom-eslint-slow/package.json
@@ -9,32 +9,32 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.3",
+    "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "13.1.4",
-    "@nrwl/eslint-plugin-nx": "13.1.4",
-    "@nrwl/jest": "13.1.4",
-    "@nrwl/linter": "13.1.4",
-    "@nrwl/nest": "13.1.4",
-    "@nrwl/node": "13.1.4",
-    "@nrwl/tao": "13.1.4",
-    "@nrwl/workspace": "13.1.4",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@nrwl/cli": "13.5.2",
+    "@nrwl/eslint-plugin-nx": "13.5.2",
+    "@nrwl/jest": "13.5.2",
+    "@nrwl/linter": "13.5.2",
+    "@nrwl/nest": "13.5.2",
+    "@nrwl/node": "13.5.2",
+    "@nrwl/tao": "13.5.2",
+    "@nrwl/workspace": "13.5.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~4.33.0",
-    "@typescript-eslint/parser": "~4.33.0",
-    "eslint": "7.32.0",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
+    "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
