chore: test swc-node/register

--- a/custom-eslint-slow/libs/api/lib1/tsconfig.lib.json
+++ b/custom-eslint-slow/libs/api/lib1/tsconfig.lib.json
@@ -8,5 +8,5 @@
     "target": "es6"
   },
   "exclude": ["**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "../../../../plain/libs/api/lib1/src/lib/models.ts"]
 }
