--- a/custom-eslint-slow/package.json
+++ b/custom-eslint-slow/package.json
@@ -31,6 +31,7 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
+    "esbuild-runner": "^2.2.1",
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
