--- a/plain/.eslintrc.json
+++ b/plain/.eslintrc.json
@@ -24,12 +24,16 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
-      "rules": {}
+      "rules": {
+        "@nrwl/nx/workspace/b-new-rule": "error"
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
       "extends": ["plugin:@nrwl/nx/javascript"],
-      "rules": {}
+      "rules": {
+        "@nrwl/nx/workspace/b-new-rule": "error"
+      }
     }
   ]
 }
