--- a/plain/package.json
+++ b/plain/package.json
@@ -12,6 +12,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@swc-node/register": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
@@ -27,10 +28,13 @@
     "@nrwl/node": "13.5.2",
     "@nrwl/tao": "13.5.2",
     "@nrwl/workspace": "13.5.2",
+    "@swc/register": "^0.1.9",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/experimental-utils": "^5.10.1",
     "@typescript-eslint/parser": "5.3.1",
+    "esbuild-runner": "^2.2.1",
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
